# -Jupyter-to-Deploy

./: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  testes.py
.github/workflows/: main.yaml
app/: .env  config.py  data.py  main.py  model.py  routes.py  schema.py  teste_env.py
tests/: test_api.py
